--- a/tasks/config/control_center.yml
+++ b/tasks/config/control_center.yml
@@ -3,3 +3,12 @@
     descrip: "For control center, remove the 'Common Tasks' section in sidebar"
     key: "/org/mate/control-center/cc-actions-list"
 
+- name: "For control center, remove menu file 'Internet and Network' menu"
+  ansible.builtin.replace:
+    path: /etc/xdg/menus/matecc.menu
+    regexp: >-
+      ^<-- Internet.*End Internet and Network -->$
+    replace: ''
+  become: true
+  become_user: root
+
