--- a/tasks/config/control_center.yml
+++ b/tasks/config/control_center.yml
@@ -7,7 +7,7 @@
   ansible.builtin.replace:
     path: /etc/xdg/menus/matecc.menu
     regexp: >-
-      ^<-- Internet.*End Internet and Network -->$
+      ^\s\s<!-- Internet and Network.*End Internet and Network -->$
     replace: ''
   become: true
   become_user: root
