--- a/tasks/config/control_center.yml
+++ b/tasks/config/control_center.yml
@@ -7,7 +7,7 @@
   ansible.builtin.replace:
     path: /etc/xdg/menus/matecc.menu
     regexp: >-
-      ^\s\s<!-- Internet and Network(.|\n)+End Internet and Network -->\n$
+      ^\s\s<!-- Internet and Network(.|\n)+End Internet and Network -->\n\n$
     replace: ''
   become: true
   become_user: root
