--- a/tasks/config/menu.yml
+++ b/tasks/config/menu.yml
@@ -5,5 +5,7 @@
     value: "{{ show_icon }}"
     show_icon: "{{ 'true' if menu_show_icon else 'false' }}"
 
+- ansible.builtin.include_tasks: menu_applications.yml
+
 - ansible.builtin.include_tasks: menu_system.yml
 
