Fix Accessories submenu name to 'Utility'

--- a/tasks/config/menu_applications.yml
+++ b/tasks/config/menu_applications.yml
@@ -26,7 +26,7 @@
   loop:
     - { basename: 'pluma', cat: 'Office' }
     - { basename: 'mate-search-tool', cat: 'Core' }
-    - { basename: 'mate-disk-usage-analyzer', cat: 'Accessories' }
-    - { basename: 'mate-system-monitor', cat: 'Accessories' }
-    - { basename: 'mate-terminal', cat: 'Accessories' }
+    - { basename: 'mate-disk-usage-analyzer', cat: 'Utility' }
+    - { basename: 'mate-system-monitor', cat: 'Utility' }
+    - { basename: 'mate-terminal', cat: 'Utility' }
 
