--- a/tasks/config/menu_applications.yml
+++ b/tasks/config/menu_applications.yml
@@ -31,7 +31,7 @@
   ansible.builtin.include_tasks: func/desktop_entry_title.yml
   vars:
     desktop_file_basename: "{{ item.basename }}"
-    category: "{{ item.cat }}"
+    title: "{{ item.title }}"
   loop:
     - { basename: 'pluma', title: 'Pluma Text Editor' }
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
