--- a/tasks/config/menu_applications.yml
+++ b/tasks/config/menu_applications.yml
@@ -36,3 +36,11 @@
     - { basename: 'pluma', title: 'Pluma Text Editor' }
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
 
+- name: "Set mouse-hover tooltip for select 'Applications' menu entries"
+  ansible.builtin.include_tasks: func/desktop_entry_tooltip.yml
+  vars:
+    desktop_file_basename: "{{ item.basename }}"
+    tooltip: "{{ item.tooltip }}"
+  loop:
+    - { basename: 'atril', tooltip: 'View multi-page PDF documents' }
+
