Use lexicographic hide-item ord, add fontforge

--- a/tasks/config/menu_applications.yml
+++ b/tasks/config/menu_applications.yml
@@ -3,20 +3,21 @@
   vars:
     desktop_file_basename: "{{ item }}"
   loop:
-    - "engrampa"
-    - "vim"
-    - "mate-font-viewer"
-    - "eom"
-    - "mate-color-select"
+    - "avahi-discover"
     - "bssh"
     - "bvnc"
-    - "avahi-discover"
-    - "mate-dictionary"
-    - "mate-volume-control"
     - "caja-browser"
-    - "mate-system-log"
+    - "engrampa"
+    - "eom"
+    - "mate-color-select"
+    - "mate-dictionary"
     - "mate-disk-image-mounter"
+    - "mate-font-viewer"
     - "mate-power-statistics"
+    - "mate-system-log"
+    - "mate-volume-control"
+    - "org.fontforge.FontForge"
+    - "vim"
 
 - name: "Set submenu category for select 'Applications' menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_category.yml
