Use overriding [en_US] for xdg Comment/Tooltip

--- a/tasks/func/desktop_entry_tooltip.yml
+++ b/tasks/func/desktop_entry_tooltip.yml
@@ -2,7 +2,7 @@
   vars:
     short_descrip: "set menu item mouse-hover tooltip"
     line_regexp: >-
-      ^#?\s*Comment=
+      ^#?\s*Comment[en_US]=
     line_replacement: >-
-      Comment={{ tooltip }}
+      Comment[en_US]={{ tooltip }}
 
