Add intermediate entry_dir

--- a/tasks/func/desktop_entry_category.yml
+++ b/tasks/func/desktop_entry_category.yml
@@ -5,4 +5,6 @@
       ^#?\s*Categories=
     line_replacement: >-
       Categories={{ category }};
+    vars:
+      dir: "{{ entry_dir | default(omit) }}"
 
