--- a/tasks/func/desktop_entry_edit.yml
+++ b/tasks/func/desktop_entry_edit.yml
@@ -6,7 +6,7 @@
     state: present
     create: no
   vars:
-    desktop_entry_dir: "{{ entry_dir | default('/usr/share/applications') }}"
+    desktop_entry_dir: "{{ dir | default('/usr/share/applications') }}"
   become: true
   become_user: root
   notify: restart-mate-panel
