--- a/tasks/func/desktop_entry_edit.yml
+++ b/tasks/func/desktop_entry_edit.yml
@@ -1,12 +1,10 @@
 - name: "For '{{ desktop_file_basename }}.desktop', {{ short_descrip }}"
   ansible.builtin.lineinfile:
-    path: "{{ desktop_entry_dir }}/{{ desktop_file_basename }}.desktop"
+    path: "/usr/share/applications/{{ desktop_file_basename }}.desktop"
     regexp: "{{ line_regexp }}"
     line: "{{ line_replacement }}"
     state: present
     create: no
-  vars:
-    desktop_entry_dir: "{{ dir | default('/usr/share/applications') }}"
   become: true
   become_user: root
   notify: restart-mate-panel
