Try insert after main desktop-entry cat hdr

--- a/tasks/func/desktop_entry_edit.yml
+++ b/tasks/func/desktop_entry_edit.yml
@@ -3,6 +3,9 @@
     path: "/usr/share/applications/{{ desktop_file_basename }}.desktop"
     regexp: "{{ line_regexp }}"
     line: "{{ line_replacement }}"
+    insertafter: >-
+      ^[Desktop Entry]$
+    firstmatch: yes
     state: present
     create: no
   become: true
