Try just using [en] for Comment / tooltip

--- a/tasks/func/desktop_entry_tooltip.yml
+++ b/tasks/func/desktop_entry_tooltip.yml
@@ -2,7 +2,7 @@
   vars:
     short_descrip: "set menu item mouse-hover tooltip"
     line_regexp: >-
-      ^#?\s*Comment[en_US]=
+      ^#?\s*Comment[en]=
     line_replacement: >-
-      Comment[en_US]={{ tooltip }}
+      Comment[en]={{ tooltip }}
 
