--- a/tasks/func/desktop_entry_edit.yml
+++ b/tasks/func/desktop_entry_edit.yml
@@ -4,7 +4,7 @@
     regexp: "{{ line_regexp }}"
     line: "{{ line_replacement }}"
     insertafter: >-
-      ^[Desktop Entry]$
+      ^\[Desktop Entry\]$
     firstmatch: yes
     state: present
     create: no
