Add initial sections for FreeBSD support

--- a/tasks/install/freebsd/install_wm_pkgs.yml
+++ b/tasks/install/freebsd/install_wm_pkgs.yml
@@ -1,7 +1,7 @@
 # See https://docs.ansible.com/ansible/latest/collections/community/general/dconf_module.html#notes
-- name: "Install 'python-psutil' package, for ansible dconf support"
-  community.general.pacman:
-    name: python-psutil
+- name: "Install 'sysutils/py-psutil' package, for ansible dconf support"
+  ansible.builtin.package:
+    name: sysutils/py-psutil
     state: present
   become: true
   become_user: root
