Rem validate for freebsd /etc/fstab procfs mod

--- a/tasks/install/freebsd/install_base_pkgs.yml
+++ b/tasks/install/freebsd/install_base_pkgs.yml
@@ -1,4 +1,4 @@
-- name: "Install 'xorg-server' display server package"
+- name: "Install 'xorg-minimal' display server package"
   ansible.builtin.package:
     name: xorg-minimal
     state: present
