--- a/tasks/install/freebsd/load_services.yml
+++ b/tasks/install/freebsd/load_services.yml
@@ -9,14 +9,29 @@
   become: true
   become_user: root
 
-- name: "Set procfs to mount at boot in /etc/fstab"
-  ansible.builtin.blockinfile:
-    path: '/etc/fstab'
-    insertafter: EOF
-    block: 'proc           /proc       procfs  rw  0   0'
-    marker: "# {mark} ANSIBLE MANAGED BLOCK: mount procfs"
-    create: no
-    state: present
-  become: true
-  become_user: root
+- name: "Ensure dbus service is started"
+  ansible.builtin.service:
+    name: dbus
+    state: started
+
+# - name: "Set procfs to mount at boot in /etc/fstab"
+#   ansible.builtin.blockinfile:
+#     path: '/etc/fstab'
+#     insertafter: EOF
+#     block: 'proc           /proc       procfs  rw  0   0'
+#     marker: "# {mark} ANSIBLE MANAGED BLOCK: mount procfs"
+#     create: no
+#     state: present
+#   become: true
+#   become_user: root
+
+- name: "Mount procfs, and set it to mount at boot in /etc/fstab"
+  ansible.posix.mount:
+    src: 'proc'
+    path: '/proc'
+    fstype: 'procfs'
+    opts: 'rw'
+    dump: '0'
+    passno: '0'
+    state: mounted
 
