--- a/tasks/install/freebsd/main.yml
+++ b/tasks/install/freebsd/main.yml
@@ -1,4 +1,4 @@
-- name: "Install base 'mate' package-group window manager packages"
+- name: "Install base mate packages"
   ansible.builtin.include_tasks: install_base_pkgs.yml
 
 - name: "Load services requried for mate desktop"
