For FreeBSD, install mate-desktop, rem mate-base
- mate-base is the package group with all of the main WM components,
  that are already being installed individually.
- mate-desktop package looks like it is still required by many mate
applications on FreshPorts, but for some reason it FreeBSD does not mark "required
by" for anything in the dependency list.

--- a/tasks/install/freebsd/install_base_pkgs.yml
+++ b/tasks/install/freebsd/install_base_pkgs.yml
@@ -6,13 +6,14 @@
   become_user: root
 
 - name: "Install packages for a basic mate desktop environment"
+  # Package-group latest list: https://www.freshports.org/x11/mate-base/
   ansible.builtin.package:
     name:
       - caja
       - marco
       - mate-backgrounds
       - mate-control-center
-      - mate-base
+      - mate-desktop
       - mate-icon-theme
       - mate-menus
       - mate-notification-daemon
