--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: "Install Xorg display server"
+  ansible.builtin.include_tasks: install_xorg/main.yml
+
 - name: "Install MATE DE packages"
   ansible.builtin.include_tasks: install/main.yml
 
