--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,9 @@
 - name: "Install minimal, functional MATE DE"
   ansible.builtin.include_tasks: install_mate_min/main.yml
 
+- name: "Install MATE Control Center packages"
+  ansible.builtin.include_tasks: install_ctl_ctr/main.yml
+
 - name: "Install MATE DE packages"
   ansible.builtin.include_tasks: install/main.yml
 
