--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,9 @@
 - name: "Install MATE Control Center packages"
   ansible.builtin.include_tasks: install_ctl_ctr/main.yml
 
+- name: "Install MATE add-on applications"
+  ansible.builtin.include_tasks: install_mate_apps/main.yml
+
 - name: "Install MATE DE packages"
   ansible.builtin.include_tasks: install/main.yml
 
