--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -1,4 +1,4 @@
-- name: "Hide select entries from appearing in 'Applications' menu"
+- name: "Hide select entries from appearing in 'Applications' start menu"
   ansible.builtin.include_tasks: func/desktop_entry_hide.yml
   vars:
     desktop_file_basename: "{{ item }}"
@@ -22,7 +22,7 @@
     - "qvidcap"
     - "vim"
 
-- name: "Set submenu category for select 'Applications' menu entries"
+- name: "Set submenu category for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_category.yml
   vars:
     desktop_file_basename: "{{ item.basename }}"
@@ -34,7 +34,7 @@
     - { basename: 'mate-volume-control', cat: 'Settings;HardwareSettings' }
     - { basename: 'pluma', cat: 'Office' }
 
-- name: "Set item title for select 'Applications' menu entries"
+- name: "Set item title for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_title.yml
   vars:
     desktop_file_basename: "{{ item.basename }}"
@@ -45,7 +45,7 @@
     - { basename: 'atril', title: 'Atril PDF Document Viewer' }
     - { basename: 'vlc', title: 'VLC Video Player' }
 
-- name: "Set mouse-hover tooltip for select 'Applications' menu entries"
+- name: "Set mouse-hover tooltip for select 'Applications' start menu entries"
   ansible.builtin.include_tasks: func/desktop_entry_tooltip.yml
   vars:
     desktop_file_basename: "{{ item.basename }}"
