--- a/tasks/func/desktop_entry_edit.yml
+++ b/tasks/func/desktop_entry_edit.yml
@@ -1,23 +1,12 @@
-- name: "Edit a line in a .desktop, file, if the file exists"
-  block:
-    - name: "Check if '{{ desktop_file_path }}' exists"
-      ansible.builtin.stat:
-        path: "{{ desktop_file_path }}"
-      register: result
-    - name: "For '{{ desktop_file_basename }}.desktop', {{ short_descrip }}"
-      ansible.builtin.lineinfile:
-        path: "{{ desktop_file_path }}"
-        regexp: "{{ line_regexp }}"
-        line: "{{ line_replacement }}"
-        insertafter: >-
-          ^\[Desktop Entry\]$
-        firstmatch: yes
-        state: present
-        create: no
-      when: result.stat.exists
-      notify: restart-mate-panel
+- name: "Edit a .desktop file for Linux"
+  ansible.builtin.include_tasks: func/desktop_entry.yml
   vars:
-    desktop_file_path: "/usr/share/applications/{{ desktop_file_basename }}.desktop"
-  become: true
-  become_user: root
+    desktop_file_path: "{{ linux_dot_desktop_files_dir }}/{{ desktop_file_basename }}.desktop"
+  when: ansible_system == "Linux"
+
+- name: "Edit a .desktop file for FreeBSD"
+  ansible.builtin.include_tasks: func/desktop_entry.yml
+  vars:
+    desktop_file_path: "{{ freebsd_dot_desktop_files_dir }}/{{ desktop_file_basename }}.desktop"
+  when: ansible_os_family == "FreeBSD"
 
