--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,15 +7,33 @@
 - name: "Install and configure MATE system-layer"
   ansible.builtin.include_tasks: install_mate_sys/main.yml
 
-- name: "Install MATE Control Center packages"
+- name: "Install Control Center packages"
   ansible.builtin.include_tasks: install_ctl_ctr/main.yml
 
-- name: "Install MATE add-on applications"
+- name: "Install add-on applications"
   ansible.builtin.include_tasks: install_mate_apps/main.yml
 
-- name: "Install MATE DE packages"
-  ansible.builtin.include_tasks: install/main.yml
+- name: "Configure background and theming"
+  ansible.builtin.include_tasks: config_bg_theme/main.yml
 
-- name: "Configure MATE window manager settings"
-  ansible.builtin.include_tasks: config/main.yml
+- name: "Configure Control Center settings"
+  ansible.builtin.include_tasks: config_ctl_ctr/main.yml
+
+- name: "Configure input, sound, and storage hardware devices"
+  ansible.builtin.include_tasks: config_hw_devices/main.yml
+
+- name: "Configure top and bottom panels/trays"
+  ansible.builtin.include_tasks: config_panels/main.yml
+
+- name: "Configure power and screen settings"
+  ansible.builtin.include_tasks: config_pwr_screen/main.yml
+
+- name: "Configure 'Start' menus"
+  ansible.builtin.include_tasks: config_start_menus/main.yml
+
+- name: "Configure the MATE Terminal application"
+  ansible.builtin.include_tasks: config_terminal/main.yml
+
+- name: "Configure user-interface, icons, and fonts"
+  ansible.builtin.include_tasks: config_ui_icons_fonts/main.yml
 
