Fix win-border theme to x-platform "BlueSubmarine"

--- a/defaults/main/wm_components/theme.yml
+++ b/defaults/main/wm_components/theme.yml
@@ -2,7 +2,7 @@
 theme_for_windows: "Blue-Submarine"
 
 # WM theme for window borders and title-bars
-theme_for_borders: "Blue-Submarine-border"
+theme_for_borders: "Blue-Submarine"
 
 # theme for pop-up notifications
 theme_for_notifications: "coco"
