Fix mouse theme to cross-platform "Adwaita"

--- a/defaults/main/wm_components/mouse.yml
+++ b/defaults/main/wm_components/mouse.yml
@@ -1,5 +1,5 @@
 # theme/appearance of mouse pointer
-mouse_pointer_theme: "mate-black"
+mouse_pointer_theme: "Adwaita"
 
 # size of mouse pointer (depending on theme: "24", "32", "48", or "64")
 mouse_pointer_size: "48"
