Hide fish app application menu item

--- a/tasks/config_start_menus/applications_menu.yml
+++ b/tasks/config_start_menus/applications_menu.yml
@@ -10,6 +10,7 @@
     - "cups"
     - "engrampa"
     - "eom"
+    - "fish"
     - "libreoffice-base"
     - "mate-color-select"
     - "mate-dictionary"
