--- a/tasks/config_panels/bottom_panel.yml
+++ b/tasks/config_panels/bottom_panel.yml
@@ -1,8 +1,15 @@
+# - ansible.builtin.include_tasks: func/dconf_notify.yml
+#   vars:
+#     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
+#     key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
+#     value: "''"
+#     wksp_item: "workspace-switcher"
+#     notify_receiver: restart-mate-panel
+
 - ansible.builtin.include_tasks: func/dconf_notify.yml
   vars:
     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
-    key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
-    value: "''"
+    key: "/org/mate/panel/objects/{{ wksp_item }}"
     wksp_item: "workspace-switcher"
     notify_receiver: restart-mate-panel
 
