--- a/tasks/config_panels/bottom_panel.yml
+++ b/tasks/config_panels/bottom_panel.yml
@@ -6,7 +6,7 @@
 #     wksp_item: "workspace-switcher"
 #     notify_receiver: restart-mate-panel
 
-- ansible.builtin.include_tasks: func/dconf_notify.yml
+- ansible.builtin.include_tasks: func/dconf_rem_notify.yml
   vars:
     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
     key: "/org/mate/panel/objects/{{ wksp_item }}"
