--- a/tasks/config_panels/bottom_panel.yml
+++ b/tasks/config_panels/bottom_panel.yml
@@ -1,23 +1,23 @@
-# - ansible.builtin.include_tasks: func/dconf_notify.yml
-#   vars:
-#     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
-#     key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
-#     value: "''"
-#     wksp_item: "workspace-switcher"
-#     notify_receiver: restart-mate-panel
-
-- ansible.builtin.include_tasks: func/dconf_rem_notify.yml
+- ansible.builtin.include_tasks: func/dconf_notify.yml
   vars:
     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
-    key: "/org/mate/panel/objects/{{ wksp_item }}"
+    key: "/org/mate/panel/objects/{{ wksp_item }}/toplevel-id"
+    value: "''"
     wksp_item: "workspace-switcher"
     notify_receiver: restart-mate-panel
 
-- ansible.builtin.include_tasks: func/dconf.yml
-  vars:
-    descrip: "Define all available top/bottom panel items, with wksp-switcher removed"
-    key: "/org/mate/panel/general/object-id-list"
-    value: "{{ panels_available_items | string }}"
+# - ansible.builtin.include_tasks: func/dconf_rem_notify.yml
+#   vars:
+#     descrip: "For bottom panel, remove the '{{ wksp_item }}' panel item"
+#     key: "/org/mate/panel/objects/{{ wksp_item }}"
+#     wksp_item: "workspace-switcher"
+#     notify_receiver: restart-mate-panel
+
+# - ansible.builtin.include_tasks: func/dconf.yml
+#   vars:
+#     descrip: "Define all available top/bottom panel items, with wksp-switcher removed"
+#     key: "/org/mate/panel/general/object-id-list"
+#     value: "{{ panels_available_items | string }}"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
