--- a/tasks/install_mate_min/main.yml
+++ b/tasks/install_mate_min/main.yml
@@ -2,21 +2,22 @@
   # Package-group latest list: https://www.freshports.org/x11/mate-base/
   # Package-group latest list: https://archlinux.org/groups/x86_64/mate/
   ansible.builtin.package:
-    name:
-      - caja
-      - marco
-      - mate-backgrounds
-      - mate-control-center
-      - mate-desktop
-      - mate-icon-theme
-      - mate-menus
-      - mate-notification-daemon
-      - mate-panel
-      - mate-polkit
-      - mate-session-manager
-      - mate-settings-daemon
-      - mate-themes
+    name: "{{ item }}"
     state: present
+  loop:
+    - caja
+    - marco
+    - mate-backgrounds
+    - mate-control-center
+    - mate-desktop
+    - mate-icon-theme
+    - mate-menus
+    - mate-notification-daemon
+    - mate-panel
+    - mate-polkit
+    - mate-session-manager
+    - mate-settings-daemon
+    - mate-themes
   become: true
   become_user: root
 
